      trove uphill.
    * A bug that would cause "conary migrate" to raise a KeyError when
      updating a group that referenced the same trove twice (through
      two subgroups) has been fixed.
    * A bug that caused miscalculations when determining whether a
      shadow has been modified has been fixed.
    * A number of bugs affecting resetting distributed changesets have
      been fixed.

  o Server Changes:
    * A new "entitlementCheckURL" configuration option has been added.
      This is a hook that allows external validation of entitlements.

Changes in 1.0.15
  o Client Changes:
    * When writing files as non-root, Conary will no longer create
      files setuid or setgid unless the uid/gid creating the file
      matches the username/groupname in the package.
    * Conary now checks the rollback count argument for non-positive
      numbers and numbers greater then the number of rollbacks
      available. (bz #1072)
    * The entitlement parser has been reimplemented using expat
      instead of a hand-coded parser.  A correctly formatted
      entitlement file should now be enclosed in an
      <entitlement></entitlement> element.  Conary will continue to
      work with files that do not contain the toplevel <entitlement>
      element.

  o Build Changes:
    * Support has been added for recipe templates.  Now when running
      "cvc newpkg", cvc will automatically create a recipe from a
      template specified by the recipeTemplate configuration
      option. (bz #671, #1059)
    * Policy objects can now accept globs and brace expansions when
      specifying subtrees.
    * Cross-compile builds now provide CONFIG_SITE files to enable
      cross-compiling programs that require external site config
      files.  The default site config files are included.
    * The "cvc checkout" command can now check out multiple source
      troves in a single invocation.

  o Server Changes: